added ApplicationRolesViewModel and added validtion for role name size

--- a/DetailWorkflow/Views/ApplicationRoles/Create.cshtml
+++ b/DetailWorkflow/Views/ApplicationRoles/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model DetailWorkflow.Models.ApplicationRole
+﻿@model DetailWorkflow.ViewModels.ApplicationRoleViewModel
 
 @{
     ViewBag.Title = "Create";
