--- a/DetailWorkflow/Views/ApplicationRoles/Edit.cshtml
+++ b/DetailWorkflow/Views/ApplicationRoles/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model DetailWorkflow.Models.ApplicationRole
+﻿@model DetailWorkflow.ViewModels.ApplicationRoleViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>ApplicationRole</h4>
         <hr />
