--- a/DetailWorkflow/Views/Shared/_Layout.cshtml
+++ b/DetailWorkflow/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title Women Empowerment</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -12,18 +12,43 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
+
+                <a href="/" class="navbar-brand">
+                    <img src="~/Images/AwesomeWomenEmpowered.fw.png" alt="" />
+                </a>
+
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
+                    @*Security*@
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="False">Security <i class="caret"></i> </a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Roles", "Index", "ApplicationRoles")</li>
+                            <li>@Html.ActionLink("Users", "Index", "ApplicationUsers")</li>
+                        </ul>
+                    </li>
+
+                    @*Catalog*@
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="False">Security <i class="caret"></i> </a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
+                            <li class="divider"></li>
+                            <li>@Html.ActionLink("Inventory", "Index", "InventoryItems")</li>
+                            <li>@Html.ActionLink("Service Items", "Index", "ServiceItems")</li>
+                        </ul>
+                    </li>
+
+                    <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+                    <li>@Html.ActionLink("Work Orders","Index","WorkOders")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -33,7 +58,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Detail Workflow Application</p>
         </footer>
     </div>
 
