added bootstrap styling to categories node

--- a/DetailWorkflow/Views/Categories/Index.cshtml
+++ b/DetailWorkflow/Views/Categories/Index.cshtml
@@ -2,6 +2,11 @@
 
 <h2>Categories</h2>
 
+<p>
+    <br/>
+    <a href="/Categories/Create" class="btn btn-success btn-sm">Create New</a>
+</p>
+
 <div class="categories">
     @Html.Raw(@Model)
 </div>
