--- a/DetailWorkflow/Views/Categories/Edit.cshtml
+++ b/DetailWorkflow/Views/Categories/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Category</h4>
         <hr />
@@ -20,8 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ParentCategoryId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ParentCategoryId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ParentCategoryId, "", new { @class = "text-danger" })
+                @Html.DropDownList("ParentCategoryId", (IEnumerable<SelectListItem>)ViewBag.ParentCategoryIdSelectList, "None", new { @class = "form-control" })
             </div>
         </div>
 
