--- a/DetailWorkflow/Views/Categories/Delete.cshtml
+++ b/DetailWorkflow/Views/Categories/Delete.cshtml
@@ -9,7 +9,7 @@
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Category</h4>
-    <hr />
+    @Html.ValidationSummary()
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.ParentCategoryId)
