scaffolded laborsController, partsController. Added data annotations to Cutomer and WorkOrder model

--- a/DetailWorkflow/Views/Shared/_Layout.cshtml
+++ b/DetailWorkflow/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
                     @*Catalog*@
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="False">Security <i class="caret"></i> </a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="False">Catalog <i class="caret"></i> </a>
                         <ul class="dropdown-menu" role="menu">
                             <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
                             <li class="divider"></li>
@@ -48,7 +48,7 @@
                     </li>
 
                     <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
-                    <li>@Html.ActionLink("Work Orders","Index","WorkOders")</li>
+                    <li>@Html.ActionLink("WorkOrders","Index","WorkOrders")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
