added VeryLongDateTime View Template

--- a/DetailWorkflow/Views/WorkOrders/Index.cshtml
+++ b/DetailWorkflow/Views/WorkOrders/Index.cshtml
@@ -41,7 +41,7 @@
             @Html.DisplayFor(modelItem => item.Customer.AccountNumber)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.OrderDateTime)
+            @Html.DisplayFor(modelItem => item.OrderDateTime,"VeryLongDateTime")
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.TargetDateTime)
