--- a/DetailWorkflow/Views/Shared/_Layout.cshtml
+++ b/DetailWorkflow/Views/Shared/_Layout.cshtml
@@ -6,7 +6,8 @@
     <title>@ViewBag.Title Women Empowerment</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    @Scripts.Render("~/bundles/jquery")
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -62,7 +63,6 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
