--- a/DetailWorkflow/Views/WorkOrders/Edit.cshtml
+++ b/DetailWorkflow/Views/WorkOrders/Edit.cshtml
@@ -85,6 +85,12 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-offset-2 col-md-10">
+                @{ Html.RenderAction("Index", "Parts", new {workOrderId = Model.WorkOrderId}); }
+            </div>
+        </div>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
