added bootstrap model to add/edit/delete part in workOrder view

--- a/DetailWorkflow/Views/Labors/Delete.cshtml
+++ b/DetailWorkflow/Views/Labors/Delete.cshtml
@@ -67,6 +67,10 @@
             @Html.DisplayFor(model => model.Notes)
         </dd>
 
+        <dd>
+            @Html.DisplayFor(model => model.PercentComplete)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
