--- a/DetailWorkflow/Views/WorkOrders/Edit.cshtml
+++ b/DetailWorkflow/Views/WorkOrders/Edit.cshtml
@@ -1,11 +1,14 @@
 ﻿@model DetailWorkflow.Models.WorkOrder
 
-@{
-    ViewBag.Title = "Edit";
-}
+<h2>Edit Work Order</h2>
 
-<h2>Edit</h2>
-
+<div id="partsModal" class="modal fade in">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div id="partsModalContent"></div>
+        </div>
+    </div>
+</div>
 
 @using (Html.BeginForm())
 {
@@ -105,4 +108,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/workorder.js"></script>
 }
