--- a/DetailWorkflow/Views/Labors/_Delete.cshtml
+++ b/DetailWorkflow/Views/Labors/_Delete.cshtml
@@ -1,24 +1,14 @@
 ﻿@model DetailWorkflow.Models.Labor
 
-@{
-    ViewBag.Title = "Delete";
-}
+<div class="modal-header">
+    <a class="close" data-dismiss="modal" aria-hidden="True">&times;</a>
+    <h4 class="modal-title">Are you sure you want to delete this?</h4>
+</div>
 
-<h2>Delete</h2>
+<div class="modal-body">
+    <p id="MessageToClient" class="text-danger"></p>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Labor</h4>
-    <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.WorkOrder.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.WorkOrder.Description)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.ServiceItemCode)
         </dt>
@@ -56,7 +46,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ExtendedPrice)
+            @Html.DisplayFor(model => model.ExtendedPrice, "CustomNumberFormat")
         </dd>
 
         <dt>
@@ -66,19 +56,24 @@
         <dd>
             @Html.DisplayFor(model => model.Notes)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.PercentComplete)
+        </dt>
 
         <dd>
             @Html.DisplayFor(model => model.PercentComplete)
         </dd>
 
     </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
 </div>
+
+@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "laborchoice", @class = "deleteform" }))
+{
+    @Html.AntiForgeryToken()
+
+    <div class="modal-footer">
+        <a class="btn btn-default" data-dismiss="modal">Cancel</a>
+        <input class="btn btn-primary" type="submit" value="Yes" />
+    </div>
+}
+
